--- a/mos.yml
+++ b/mos.yml
@@ -1,6 +1,6 @@
 author: Liviu Nicolescu <nliviu@gmail.com>
 description: SD library
-version: 1.0.0
+version: 1.0.1
 
 manifest_version: 2017-09-29
 
@@ -27,7 +27,10 @@ config_schema:
  - ["sd_spi.pin_mosi", "i", 15, {title: "SD SPI mosi"}] # hardwired for Lolin32 Pro
  - ["sd_spi.pin_clk", "i", 14, {title: "SD SPI clk"}]   # hardwired for Lolin32 Pro
  - ["sd_spi.pin_cs", "i", 13, {title: "SD SPI cs"}]     # hardwired for Lolin32 Pro
+ - ["sd_sdmmc", "o", {title: "SD SDMMC settings"}]
+ - ["sd_sdmmc.use1line", "b", false, {title: "Set this to true if the SDMMC interface uses 1-line mode"}]
   
 build_vars:
   ESP_IDF_EXTRA_COMPONENTS: "${build_vars.ESP_IDF_EXTRA_COMPONENTS} fatfs sdmmc wear_levelling"
+
 
