--- a/mos.yml
+++ b/mos.yml
@@ -1,6 +1,6 @@
 author: Liviu Nicolescu <nliviu@gmail.com>
 description: SD library
-version: 1.0.2
+version: 2.0
 
 manifest_version: 2017-09-29
 
@@ -35,4 +35,5 @@ config_schema:
 build_vars:
   ESP_IDF_EXTRA_COMPONENTS: "${build_vars.ESP_IDF_EXTRA_COMPONENTS} fatfs sdmmc wear_levelling"
 
-
+cdefs:
+  SDLIB_USE_ESP32S: 0
